--- a/takeHome/th_ex1/th_ex1.qmd
+++ b/takeHome/th_ex1/th_ex1.qmd
@@ -18,23 +18,25 @@ format:
 
 This exercise focus on using **Tableau Desktop** to create **multiple** **population pyramids** for Singapore based on data updated to June 2022.
 
+## 1.1 Population Pyramids
+
 ::: {.callout-warning appearance="simple" icon="false"}
 Population Pyramid helps to visualise the distribution of age and gender for a given location.
 
-The chart generally have three trends : [^1]
+The chart can generally have three trends : [^1]
 
 +-----------------------+------------------------------+------------------------------------------------------------------------------------------+
 | trend (shape)         | character                    | remarks                                                                                  |
 +=======================+==============================+==========================================================================================+
-| Expansive             | -   High fertility rate.     | -   larger percentage of young population.                                               |
+| **Expansive**         | -   High fertility rate.     | -   larger percentage of young population.                                               |
 |                       |                              |                                                                                          |
 | (triangle)            | -   High mortality rate.     | -   lower than average life expectancy.                                                  |
 |                       |                              |                                                                                          |
 |                       |                              | -   usually associate with developing nation.                                            |
 +-----------------------+------------------------------+------------------------------------------------------------------------------------------+
-| Constrictive          | -   Constant fertility rate. | -   High numbers of middle aged population.                                              |
+| **Constrictive**      | -   Constant fertility rate. | -   High numbers of middle aged population.                                              |
 |                       |                              |                                                                                          |
-| (wider in the mdidle) | -   Low mortality rate.      | -   Senior population may be larger than younger population.                             |
+| (wider in the middle) | -   Low mortality rate.      | -   Senior population may be larger than younger population.                             |
 |                       |                              |                                                                                          |
 |                       |                              | -   Countries with :                                                                     |
 |                       |                              |                                                                                          |
@@ -42,42 +44,76 @@ The chart generally have three trends : [^1]
 |                       |                              |                                                                                          |
 |                       |                              |     -   large portion of population can access to quality education and health care.[^2] |
 +-----------------------+------------------------------+------------------------------------------------------------------------------------------+
-| Stationary            | -   Low fertility rate.      | -   depict stable population.                                                            |
+| **Stationary**        | -   Low fertility rate.      | -   depict stable population.                                                            |
 |                       |                              |                                                                                          |
 | ("pillar" )           | -   Low mortality rate.      | -   often characteristic of developed nations                                            |
 +-----------------------+------------------------------+------------------------------------------------------------------------------------------+
-
-For quick reference of age groups, the labels below are adopted for further discussion.
-
-| range           | label                  |
-|-----------------|------------------------|
-| 45-49 to 65-69  | Baby Boomer Generation |
-| 35-39 to 40-44  | Gen X                  |
-| 25-29 to 30-34  | Gen Y                  |
-| 15-19 to 20 -24 | Gen Z                  |
 :::
 
 [^1]: National Geographic Society. (2022). Population Pyramid. https://education.nationalgeographic.org/resource/population-pyramid
 
 [^2]: Boucher L. (2016). What are the Different Types of Population Pyramids? **Population Education**. https://populationeducation.org/what-are-different-types-population-pyramids/
 
-## **1.1 Instruction**
+## 1.2 Classification of Age Group
+
+As one of the key elements for population pyramids, there are two main aspects for age groups :
+
+### **1.2.1 Types of Age Group**
+
+::: {.callout-warning appearance="simple" icon="false"}
+Generally, there are two classifications, **quinquennial** or **broad age** groups (e.g. 0-14 years or 65 years and over).
+
+According to [Singapore National Statistical Standards](https://www.singstat.gov.sg/-/media/files/standards_and_classifications/nsa.ashx)[^3], the quinquennial age groups (classify age in five years intervals) should be used for age distribution.
+:::
+
+[^3]: Singapore Department of Statistics. (2020). National Statistical Standards - Recommendations on Definition and Classification of Age. https://www.singstat.gov.sg/-/media/files/standards_and_classifications/nsa.ashx
+
+### 1.2.2 Bins of Age Group
+
+::: {.callout-warning appearance="simple" icon="false"}
+The amount of bins depends on the context required for the plots. Hence,
+
++----------------------------------------+--------------------+------------------+
+| context to plot population pyramids    | youngest age group | eldest age group |
++========================================+====================+==================+
+| population                             | 0 - 4              | 90 & Over        |
++----------------------------------------+--------------------+------------------+
+| resident labour force                  | 15 - 19            | 70 & Over        |
++----------------------------------------+--------------------+------------------+
+| unemployed residents                   | 0 - 12             | 55 & Over        |
++----------------------------------------+--------------------+------------------+
+| married couples in resident households | below 30           | 65 & Over        |
++----------------------------------------+--------------------+------------------+
+
+note : for quick reference, the labels below will be adopted in section 4 Discussion.
+
++-----------------+------------------------+
+| range           | label                  |
++=================+========================+
+| 45-49 to 65-69  | Baby Boomer Generation |
++-----------------+------------------------+
+| 35-39 to 40-44  | Gen-X                  |
++-----------------+------------------------+
+| 25-29 to 30-34  | Gen-Y                  |
++-----------------+------------------------+
+| 15-19 to 20 -24 | Gen-Z                  |
++-----------------+------------------------+
+:::
+
+## **1.3 Scope of Study**
 
 -   Reveal the demographic structure of Singapore at the **Planning Area** level by using the **Age-Sex** **Population Pyramid** method.
 
--   Display nine (9) Population Pyramids, each representing a planning area in a single view.
+-   Display nine (9) Population Pyramids in a single view.
 
-# **2. PLOT MULTIPLE POPULATION PYRAMID with TABLEAU DESKTOP**
+    -   [My approach in essence :]{style="color:#d69c3c"}
+        -   [Out of this study's 55 Singapore Planning Areas (PAs), nine are filtered based on the top 9 highest population count.]{style="color:#d69c3c"}
 
-There are four (4) main flows involved to plot multiple population pyramid.
+        -   [Plot 2 types of facets i.e. grid and wrap to explore the feasibility of visual analysis]{style="color:#d69c3c"}
 
--   acquire and upload data.
+-   Write 500 words to discuss the pattern revealed by the plot.
 
--   inspect and wrangle data.
-
--   plot multiple population pyramid.
-
--   organise plotted charts on dashboard.
+# **2. DATA**
 
 ## **2.1 Acquire & Upload Data**
 
@@ -115,28 +151,26 @@ This study will be based on demographic data set downloadable from [Singstat.gov
 :::
 :::
 
-### **2.1.2 Upload Data**
+### **2.1.2 Upload Data into Tableau Desktop**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-2.1** : Click "**File**" from the Tableau Desktop main menu and select "**Open**" from the drop-down options.
-:::
 
 ![Figure 2.1](images/image-1671792539.png){fig-alt="To upload data into Tableau Desktop, first click on \"File\" from the main menu." fig-align="left" width="400"}
+:::
 
 ::: {.callout-tip collapse="true" appearance="simple" icon="false"}
 ## [**note : If the above screen is not your landed screen, click here**]{style="color:#3a9c88"}
 
-Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, click "**Data Source**". You will be directed to the homepage, then perform **Step-1**.
+Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, click "**Data Source**". You will be directed to the homepage, then perform **Step-2.1**.
 
 ![Figure 2.2](images/image-987662873.png){fig-alt="This image shows the clickable \"Data Source\" to direct user to the homepage." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.2** : Select "**respopagesextod2022**" when prompted by an "**Open**" window.
+**Step-2.2** : Select "**respopagesextod2022**" to load the file into Tableau Desktop when prompted by an "**Open**" window. Once the data is loaded, your screen should look similar to **Figure 2.3**.
 :::
-
-![Figure 2.3](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." fig-align="left" width="400"}
 :::
 
 ## **2.2 Wrangle Data**
@@ -145,25 +179,29 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.3 : Click on the inverted triangle icon under the "Sex**" field, as highlighted in **Figure 2.3**.
+**Step-2.3 :** Click on the inverted triangle icon within the **"Sex**" field, as highlighted in **Figure 2.3**.
+
+![Figure 2.3](images/image-1547787260.png){fig-alt="To create a \"Calculated Field\", click the triangle icon next to the \"Sex\" field." fig-align="left" width="400"}
 :::
 
-![Figure 2.4](images/image-1398127722.png){fig-alt="To open the input panel for the creation of calculated field." fig-align="left" width="400"}
-
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.4 : Select "Create Calculated Field...**" from the drop-down options (refers to **Figure 2.4)** to open an input panel, as shown in **Figure 2.5**.
+**Step-2.4 :** As shown in **Figure 2.4**, select **"Create Calculated Field...**" from the drop-down options to open an input panel, as shown in **Figure 2.5**.
+
+![Figure 2.4](images/image-1398127722.png){fig-alt="To open the input panel for the creation of calculated field." fig-align="left" width="400"}
 
 ![Figure 2.5](images/image-726087864.png){fig-alt="User will be prompted with the input panel for the creation of calculated field." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.5 :** To create **"Male Population" measured field, first change the field title to** "Male Population". Next, input **"IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
+**Step-2.5 :** To create **"Male Population"** measured field, first change the field title to "**Male Population**".
+
+Next, input **"IF \[Sex\] ="Males" THEN \[Pop\] END**", as shown in **Figure 2.6**.
 
 ![Figure 2.6](images/image-1552505160.png){fig-alt="Input title and formula to derive a new calculated field i.e. \"Male Population\"." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.6 :** Repeat *Step-5* but with title as "**Female Population**", and replace "**Males**" with "**Females**".
+**Step-2.6 :** Repeat **Step-2.5** but this time set the title as "**Female Population**", and replace "**Males**" with "**Females**".
 :::
 :::
 
@@ -171,56 +209,54 @@ Fret not! If **Figure 2.2** is your landed screen, from the bottom left corner, 
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.7 : PA**" field to place it within the "**Rows**" panel, as shown in **Figure 2.7**.
+**Step-2.7 :** Place "**PA**" field on the "**Rows**" shelf, as shown in **Figure 2.7**.
 
 ![Figure 2.7](images/image-1871491101.png){fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.8** : Double click "**Pop**" field from the table on the left. It will be automatically summed up within the "**Rows**" panel.
+**Step-2.8** : Double click "**Pop**" field from the "Data" pane on the left. It will be automatically summed up on the "**Rows**" shelf.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.9** : Right click on the space highlighted in red, above the population count column to sort the counts in "**Sort descending**" order. Refer to **Figure 2.8**.
+**Step-2.9** : Right-click on the space highlighted in red (refers to **Figure 2.7**) above the column of the population count to sort it in "**Sort descending**" order. Refer to **Figure 2.8**.
 
 ![Figure 2.8](images/image-1919704893.png){fig-alt="Sum population for each planning area in Singapore." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-2.10** : Click the inverted triangle icon (next to "**PA**" at the "**Rows**" pane) and select "**Filter**" to open the "**Filter \[PA\]**" pane.
+**Step-2.10** : Click the inverted triangle icon (next to "**PA**" on the "**Rows**" shelf) and select "**Filter**" to open the "**Filter \[PA\]**" window.
 
-Next, change "**10**" to "**9**" for the "**Top**" value under the **"Top**" tab, as shown in **Figure 2.9**.
+Next, change "**10**" to "**9**" for the "**Top**" value under section "**By field:**", under the **"Top**" tab, as shown in **Figure 2.9**.
 
-![Figure 2.9](images/image-690824896.png){fig-align="left" width="400"}
+![Figure 2.9](images/image-690824896.png){fig-alt="Filter top 9 Singapore Planning Area by the sum of population." fig-align="left" width="400"}
 :::
 
 ![Figure 2.10](images/image-1079669590.png){alt="Figure 2.10" fig-align="left" width="400"}
 
-Remarks :
+For future references, the table below list out the regions for each of these filtered Planning Areas.
 
-Figure 2.10 shows the filtered Planning Areas.
-
-+----------------+----------------+
-| Planning Area  | Region         |
-+================+================+
-| Bedok          | East           |
-+----------------+----------------+
-| Tampines       | East           |
-+----------------+----------------+
-| Jurong West    | West           |
-+----------------+----------------+
-| Sengkang       | North-East     |
-+----------------+----------------+
-| Woodlands      | North          |
-+----------------+----------------+
-| Hougang        | North-East     |
-+----------------+----------------+
-| Yishun         | North          |
-+----------------+----------------+
-| Choa Chu Kang  | West           |
-+----------------+----------------+
-| Punggol        | North-East     |
-+----------------+----------------+
++---------------+--------------+
+| Planning Area | Region       |
++===============+==============+
+| Bedok         | East         |
++---------------+--------------+
+| Tampines      | East         |
++---------------+--------------+
+| Jurong West   | West         |
++---------------+--------------+
+| Sengkang      | North-East   |
++---------------+--------------+
+| Woodlands     | North        |
++---------------+--------------+
+| Hougang       | North-East   |
++---------------+--------------+
+| Yishun        | North        |
++---------------+--------------+
+| Choa Chu Kang | West         |
++---------------+--------------+
+| Punggol       | North-East   |
++---------------+--------------+
 
 : Table 2.1 : List of Singapore Region for the top 9 Planning Area.
 :::
@@ -229,77 +265,85 @@ Figure 2.10 shows the filtered Planning Areas.
 
 ## **3.1 Trellis Plot for Population Pyramid**
 
-This section entails steps for two trellis layout for 9 population pyramids :
+This section entails steps for two trellis layouts for 9 population pyramids :
 
--   plot in a row.
+-   grid facet - plot all pyramids in a row.
 
--   plot on 3 x 3 matrix.
+-   wrap facet - plot all pyramids 3 x 3 matrix.
 
-### 3.1.1 Plot Population Pyramids in a Row
+### **3.1.1 Grid Facet - Plot by Single Row**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.1** : Select "horizontal bars" from the "Show Me" chart options.
+**Step-3.1** : Select "horizontal bars" from the chart options under "**Show Me**" at the top right corner.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.2** : Drag "Gender" to "Color" under "Marks" pane. Next, drag the filtered "PA" to "Columns" and replace the "Rows" field with "Age Group". Thereafter, place "Male Population" and "Female Population" fields to the "Columns". Refers to **Figure 3.1**.
+**Step-3.2** : Drag "Gender" to "Color" under the "Marks" card.
+
+Next, drag the filtered "PA" to the "Columns" shelf and place "Age Group" on the "Rows" shelf.
+
+Thereafter, place the "Male Population" and "Female Population" fields on the "Columns" shelf. Refers to **Figure 3.1**.
 
 ![Figure 3.1](images/image-1153609685.png){fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.3** : Right click the "Male Population" at the x-axis to select "Edit Axis...".
+**Step-3.3** : Right-click the "Male Population" on the x-axis to select "Edit Axis..." function. You will be prompted with a window name "Edit Axis \[Male Population\]".
 
 ![Figure 3.2](images/image-1115048381.png){fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.4** : Tick "Reversed" check box under "Scale" section, as shown in **Figure 3.3**.
+**Step-3.4** : Tick the "Reversed" check box under the "Scale" section, as shown in **Figure 3.3**.
+
+Once reversed, the chart should look similar to **Figure 3.4**.
 
 ![Figure 3.3](images/image-23982472.png){fig-align="left" width="400"}
-:::
 
 ![Figure 3.4](images/image-1174017359.png){fig-alt="Top 9 Highest Singapore Planning Area by Population Count based on June 2022 dataset." fig-align="left" width="400"}
+:::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.5** : Tick "Show mark label" via "Label" under "Marks" pane.
+**Step-3.5** : Tick "**Show mark label**" via "**Label**" under "**Marks**" card.
 
 ![Figure 3.5](images/image-1417472999.png){fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.6** : Right-click the y-axis to add colour to differentiate rows for visual references. The example can be referred to in the figure below.
+**Step-3.6** : Right-click the y-axis to add colour to differentiate rows for visual references. Refers to **Figure 3.6**.
 
 ![Figure 3.6](images/image-744804813.png){width="400"}
 :::
 :::
 
-## 3.1.2 Plot Population Pyramids by 3x3 Matrix
+### **3.1.2 Wrap Facet - Plot by 3x3 Matrix**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-There are 2 parts to this approach :
+There are two main parts to this approach :
 
 -   Create a layout matrix that consists of parameter, index, columns and rows fields.
 
 -   Plot chart.
 
-#### 3.1.2.1 create new fields required for the layout matrix
+#### **3.1.2.1 create new fields required for the layout matrix**
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.7** : Start with a new worksheet. Click the inverted triangle icon from the "Data" pane to select the "Create Parameter..." function, as highlighted in red in **Figure 3.7**.
+**Step-3.7** : Start with a new worksheet.
+
+Click the inverted triangle icon from the "**Data**" pane to select the "**Create Parameter...**" function, as highlighted in red in **Figure 3.7**.
 
 ![Figure 3.7](images/image-299717765.png){fig-alt="Create new parameter by  select the \"Create Parameter...\" option." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.8** : Create a new parameter with "Total Columns" as the name, "Integer" for the "Data Type", and set "Current Value" to 3 when prompted with the "Create Parameter" pane, as shown in **Figure 3.8**.
+**Step-3.8** : Create a new parameter with "**Total Columns**" as the name, "**Integer**" for the "**Data Type**", and set "**Current Value**" to 3 when prompted with the "**Create Parameter**" window, as shown in **Figure 3.8**.
 
 ![Figure 3.8](images/image-1794749795.png){alt="Figure :" fig-alt="Create an \"Integer\" type new parameter named with \"Total Columns\", and set the \"Current value\" to 3." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.9** : Select "Create Calculated Field..." from the "Analysis" main menu. Refer to **Figure 3.9**.
+**Step-3.9** : Select "**Create Calculated Field...**" from the "**Analysis**" main menu. Refer to **Figure 3.9**.
 
 ![Figure 3.9](images/image-1514198003.png){fig-alt="From the \"Analysis\" main menu, select \"Create Calculated Field...\"" fig-align="left" width="400"}
 :::
@@ -310,58 +354,58 @@ There are 2 parts to this approach :
 +------------------------------------------------------------+
 | input to create new fields (refer to Figure 3.10)          |
 +============================================================+
-| Field Title : **Index**                                    |
+| field title : **Index**                                    |
 |                                                            |
-| Code : **INT((INDEX())%\[Total Columns\]\^2+1)**           |
+| code : **INT((INDEX())%\[Total Columns\]\^2+1)**           |
 +------------------------------------------------------------+
-| Field Title : **Column**                                   |
+| field title : **Column**                                   |
 |                                                            |
-| Code : **((\[Index\]-1)%\[Total Columns\])+1**             |
+| code : **((\[Index\]-1)%\[Total Columns\])+1**             |
 +------------------------------------------------------------+
-| Field Title : **Row**                                      |
+| field title : **Row**                                      |
 |                                                            |
-| Code : **INT((\[Index\]-\[Column\])/\[Total Columns\])+1** |
+| code : **INT((\[Index\]-\[Column\])/\[Total Columns\])+1** |
 +------------------------------------------------------------+
 
 ![Figure 3.10](images/image-1766035259.png){alt="Figure :" fig-align="left" width="400"}
 :::
 
-#### 3.1.2.2 set the framework for trellis population pyramid
+#### 3.1.2.2 set the framework to wrap the population pyramids
 
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-3.11** : Place the following fields accordingly (refers to **Figure 3.11**) :
 
--   "PA" and "Index" to the "Detail" under "Marks".
+-   "**PA**" and "**Index**" to the "**Detail**" under "**Marks**" card.
 
--   "Column" to the "Columns" pane.
+-   "**Column**" to the "**Columns**" shelf.
 
--   "Row" to the "Rows" pane.
+-   "**Row**" to the "**Rows**" shelf.
 
 ![Figure 3.11](images/image-1748493201.png){fig-alt="Set up the matrix framework before plot the trellis population pyramid." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.12** : Click the inverted triangle icon next to the "PA" (highlighted in **Figure 3.11**) within the "Marks" pane to select the "Filter..." option.
+**Step-3.12** : Click the inverted triangle icon next to the "**PA**" (highlighted in **Figure 3.11**) within the "**Marks**" card to select the "**Filter...**" option.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.13** : Change the value "10" to "9" and input the following formula "Sum(\[Pop\])", as shown in **Figure 3.12**.
+**Step-3.13** : Change the value "**10**" to "**9**" and input the following formula "**Sum(\[Pop\])**", as shown in **Figure 3.12**.
 
 ![Figure 3.12](images/image-1006918750.png){alt="Figure :" fig-alt="Filter top 9 Singapore Planning Area by the highest population via formula input." fig-align="left" width="400"}
 
-Note : Can repeat the same step entails under **Step-2.10**. The output will be the same.
+Note : alternately, you can repeat the same step entails under **Step-2.10**. The output will still be the same.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.14** : Change the "Continuous" field to a "Discrete" type. Without this step, Tableau is unable to plot horizontal bar chart without auto-adjust the "Row" to "Columns" pane.
+**Step-3.14** : Change the field type from "**Continuous**" to "**Discrete**" type. Do this to both the "**Column**" and "**Row**" fields."Without first performing this step, Tableau cannot plot a horizontal bar chart.
 
 ![Figure 3.13](images/image-1610326101.png){alt="Figure :" fig-alt="Change the \"Continuous\" field to a \"Discrete\" type." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.15** : Select the "PA" option under the "Compute Using" function, as shown in **Figure 3.14**. Do this to both "Column" and "Row" fields.
+**Step-3.15** : From the triangle icon, click on the "**Compute Using**" option to select "**PA**", as shown in **Figure 3.14**. Do this to both the "**Column**" and "**Row**" fields.
 
-Once done, 9 blocks will be laid out in the manner of 3 by 3. Refers to **Figure 3.15**.
+Once done, 9 cubics will be laid out in the manner of 3 by 3. Refers to **Figure 3.15**.
 
 ![Figure 3.14](images/image-1228855018.png){alt="Figure :" fig-alt="Compute the \"Row\" field with \"PA\"" fig-align="left" width="400"}
 
@@ -373,113 +417,133 @@ Once done, 9 blocks will be laid out in the manner of 3 by 3. Refers to **Figure
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-3.16** : Place the following fields accordingly (refers to **Figure 3.16**) :
 
--   "Gender" to the "Color" under "Marks".
+-   "**Gender**" to the "**Color**" on the "**Marks**" card.
 
--   "Male Population" and "Female Population" to the "Columns" pane.
+-   "**Male Population**" and "**Female Population**" to the "**Columns**" shelf.
 
--   "Age Group" to the "Rows" pane.
+-   "**Age Group**" to the "**Rows**" shelf.
 
-Once placed these fields, reversed the "Male Population" as entails under **Step-3.4**.
+Once placed these fields are placed, reverse the "**Male Population**" as entails under **Step-3.4**.
 
 ![Figure 3.16](images/image-184031338.png){alt="Figure :" fig-alt="Plot population pyramid by place the \"gender\" field to \"color\" under \"Marks\", both \"Male Population\" and \"Female Population\" to the \"Columns\"." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.17** : Un-tick the option "Show Header" for column "Row", as shown in **Figure 3.17**.
+**Step-3.17** : Un-tick the option "**Show Header**" for column "**Row**", as shown in **Figure 3.17**.
 
 ![Figure 3.17](images/image-545167032.png){alt="Figure :" fig-alt="Hide \"Row\" column by un-tick the \"Hide Header\" option." fig-align="left" width="400"}
 :::
 :::
 
-## **3.3 Create Chart to Reveal Gender Differences**
+## **3.3 Create Supplementary Chart** 
+
+This section lists the steps to plot circles that reveal the differences in gender population for each planning area.
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.18** : Reproduce Figure 3.10.
+**Step-3.18** : Reproduce **Figure 3.10**.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-3.19** : Adjust the following fields accordingly :
 
--   filtered "PA" from "Rows" to "Columns".
+-   filtered "**PA**" from "**Rows**" to "**Columns**" shelf.
 
--   "SUM(Pop)" to the "Rows" pane.
+-   "**SUM(Pop)**" to the "**Rows**" shelf.
 
--   "Gender" to "Color" under "Marks" pane.
+-   "**Gender**" to "**Color**" on the "**Marks**" card.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3.20** : Select "circle views" from the "Show Me" chart options and change the "Shape" to "Circle" under "Marks" pane.
+**Step-3.20** : Select "**circle views**" from the "**Show Me**" chart options and change the "**Shape**" to "**Circle**" on the "**Marks**" card.
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
 **Step-3.21** : Update the y-axis via :
 
-"Edit Axis..." :
+"**Edit Axis...**" :
 
--   Change the y-axis title to "Population Count".
+-   Change the y-axis title to "**Population Count**".
 
--   Set the range to "Fixed" option.
+-   Set the range to "**Fixed**" option.
 
--   Set 80,000 as the "Fixed start" value.
+-   Set 80,000 as the "**Fixed start**" value.
 
--   set 150,000 as the "Fixed end" value.
+-   set 150,000 as the "**Fixed end**" value.
 
-"Format" :
+"**Format**" :
 
--   Set the "Shading" under "Default" to your preferred colour.
+-   Set the "**Shading**" under "**Default**" to your preferred colour.
 :::
 :::
 
-## **3.4 Create Dashboard for Visual Analytics**
+## **3.4 Create Visual Analytics Dashboard**
 
 ::: {.callout-warning appearance="simple" icon="false"}
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-3-21** : Set the dashboard's Size to "**Generic Desktop**" and place the population pyramid trellis above and the gender differences chart below at the empty what space.
+**Step-3.22** : Set the dashboard's size to "**Generic Desktop**" and place the population pyramid trellis above, and the circles chart for gender population differences below.
 
 ![Figure 3.18](images/image-1054010951.png){fig-alt="Initiate a new dashboard." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-22** - Right click the gender differences chart title to hide it, as shown in the **Figure 3.19**.
+**Step-3.23** : Right-click the circles chart for the gender differences to hide it, as shown in the **Figure 3.19**.
 
 ![Figure 3.19](images/image-514407683.png){fig-alt="Hide the title of the chart below that repeating similar context to the chart above." fig-align="left" width="400"}
 :::
 
 ::: {.callout-note appearance="simple" icon="false"}
-**Step-23** - Drag legend to place it below the gender differences chart. Set the "Arrange Items" to "Single Row".
+**Step-3.24** : Drag the legend to place it below the circles chart.
+
+Set the "**Arrange Items**" to "**Single Row**".
 :::
 :::
 
 # **4. DISCUSSION**
 
 ::: {.callout-warning appearance="simple" icon="false"}
-Out of 55 Singapore Planning Areas (PAs) in this study, nine are filtered based on the top 9 highest population count. Then, explore the distribution of age and sex for each PA with the population pyramid.
+The discussion will be focused on two (2) aspects, **design** and **insights.**
 
-### **Trends of the Population Pyramids**
+![Figure 4.1 : Compare feasibility for visual analysis by 2 trellis layouts, Grid facet and Wrap facet for 9 population pyramids. Find out more from [my viz on Tableau Public](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_3/trel3x3_d?publish=yes){style="font-size: 11pt;"} for a more interactive view.](images/image-517277541.png){fig-align="left"}
 
-Only two PAs, namely Bedok and Jurong West, have a predominantly constrictive trend pattern. Unlike Bedok area, Jurong West may maintain its constrictive trend due to the rental potential to the type of workforce required to support Tuas Megaport. The rest of the 7 PAs show a mixture of constrictive trends with some form of either expansive or stationary trend.
+## Design Aspects
 
-On the other hand, Punggol area is the only PA showing a mixture of **constrictive trends** with the noticeable **expansive trend** observed below age 30. While the middle-aged group is the largest population, its younger generation population (below age 14) is higher than the age ranges 15 to 29. This developing township was re-vitalised by the **Punggol 21-plus** plan around the early 2010s that envisioned having 96,000 units when fully developed, attracting Gen-X and older generation, and their descendants contributed to the observed expansive trend, especially those below age 9.[^3]
+### #Horizontal References
 
-![Figure 4.1 : For more interactive view, find out more from [my viz on Tableau Public](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_3/trel3x3_d?publish=yes).](images/image-847043300.png){fig-alt="Comparing 2 types of trellis layout. First is the 9 population pyramid in a row while the second laid out 3 by 3 matrix."}
+Using quinquennial age groups for this study means the chart will have 19 age groups. Unlike a single population pyramid plot, for a trellis plot, this type of age group classification can be visually challenging when referring to an age group of a bar for the population pyramids that are plotted further away from the age group axis. This issue is more noticeable for the grid facet than the wrap facet.
 
-As shown in **Figure 4.1** above, Tampines, Sengkang and Yishun are the PAs with "pillar"-like distributions. Unlike Tampines and Yishun, which have a higher Gen Y population, Sengkang has a higher Gen X population.
+Hence, regardless of the type of trellis plot, the background rows for the female population are coloured alternately to facilitate references horizontally across the cells. Refers to **Figure 4.1**. However, the background rows for the Male population are left blank to minimise the cluttering sense.
 
-6 out of 9 Singapore Planning Areas, namely Bedok, Tampines, Woodlands, Hougang, Yishun and Chua Chu Kang, have a relatively large population of age groups above age 55. More resources and services will be needed to support senior welfare and probably set up more facilities or infrastructures.
+### #Single Context versus Multiple Contexts
 
-### Limitation of Trellis Population Pyramid
+As shown in **Figure 4.1**, these demographic plots, regardless of which type of facet, can be challenging for other contexts' visual analysis. For example, without an additional indicator, it is difficult to derive the sum and the ratio of the employed and unemployed population for each Planning Area. Thus, this plot may not be helpful for discussions that involve allocating resources for public infrastructures or services.
 
-Generally, the Population Pyramid can, to certain extend, allow users to perform high level visual analysis. However, to analyse gender and age fields more in depth, for example, the gender populations gap for each planning area, it is not easy to measure or gauge the gap easily based on the population pyramid. What's more if it's a trellis plot of population pyramid.
+But, the clarity and aesthetic aspects can be compromised when considering a plot for multiple contexts. Too many indicators can distract or dilute the key aspects or patterns intended to convey or highlight.
 
-Hence, additional chart such as circles plot for genders population will be needed to subsidise the visual analysis.
+![Figure 4.2 : Additional chart to supplement visual analytics. Find out more from [my viz on Tableau Public](https://public.tableau.com/views/SingaporePopulationPyramindJun2022v1_4/trel1r_d?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link) for a more interactive view.](images/image-215019503.png){fig-alt="Grid facet to plot 9 trellis population pyramids."}
 
-![Figure 4.2 : For more interactive view, find out more from [[my viz on Tableau Public]{.underline}](https://public.tableau.com/app/profile/joseph.zexeong.tan/viz/SingaporePopulationPyramindJun2022v1_2/Dashboard2?publish=yes){style="font-size: 11pt;"}.](images/image-709267252.png){alt="Figure 2.15" fig-alt="Add population count for each gender to add context of gender differences to the population pyramid."}
+### **#Visualise the Differences for Age Group or Gender**
 
-Visual Aesthetic vs Clarity
+Even when displaying the population figure for each bar, it can be challenging to quickly identify which Planning Area has the most prominent differences between Male and Female populations or the genders are evenly distributed. Hence, an additional chart, such as a circle plot, as shown in **Figure 4.2** can facilitate a reader to identify or gauge the differences effectively.
+
+## Insights
+
+As indicated by the figures, comparing the medium-old age groups, which is age 75 or older, the female population is larger than the males across all these 9 Singapore Planning Areas.
+
+### **#Constrictive Trend**
+
+Only Bedok and Jurong West have a predominantly constrictive trend pattern with a small dent around middle-aged, especially the Gen-X. The rest of the 7 Planning Areas, however, show a mixture of constrictive trends with some form of either expansive or stationary trend.
+
+### #Expansive Trend
+
+On the other hand, only Punggol area shows a mixture of **constrictive trends** with a noticeable **expansive trend** observed below age 30. While the middle-aged group is the largest population, its younger generation population (below age 14) is higher than the ages 15 to 29. This indicates a higher birth rate, which is true as this developing township was re-vitalised by the **Punggol 21-plus** plan around the early 2010s that envisioned having 96,000 units when fully developed, attracting Gen-X and older generation, and their descendants contributed to the observed expansive trend, especially those below age 9.[^4]
+
+### #Stationary Trend
+
+As shown in **Figure 4.1** above, Tampines, Sengkang and Yishun are the PAs with "pillar"-like distributions. Unlike Tampines and Yishun, which have a higher Gen-Y population, Sengkang has a higher Gen-X population.
 :::
 
-[^3]: Singapore Department of Statistics. (2020). Census of Population 2020 - Statistical Release 2 : Households, Geographic Distribution, Transport and Difficulty in Basic Activities. https://www.parliament.gov.sg/docs/default-source/default-document-library/cop2020sr2.pdf
+[^4]: Singapore Department of Statistics. (2020). Census of Population 2020 - Statistical Release 2 : Households, Geographic Distribution, Transport and Difficulty in Basic Activities. https://www.parliament.gov.sg/docs/default-source/default-document-library/cop2020sr2.pdf
 
 # 5. REFERENCES
 
